--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109853225-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-109853225-3');
+    </script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="apple-touch-icon" href="/img/common/horary_rain_border.png">
     <script type="text/javascript" src="/Pluto.0.3.min.js"></script>
+
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/img/common/horary_rain_square_white.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@rubyfmzk" />
+
+    <script data-ad-client="ca-pub-2934960183036863" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
     <noscript>
